All copied over

--- a/index.html
+++ b/index.html
@@ -5,5 +5,4 @@ permalink: /
 classes: wide
 ---
 
-Welcome to the Needham Sharks!
-A variety of resources can be found on this site.
+Welcome to the Needham Sharks! A variety of resources can be found on this site. This website is still a work in progress, so apologies if any bookmarks break in the upcoming weeks.
