--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: "Welcome"
 layout: tags
 permalink: /
-classes: wide
+author_profile: true
 ---
 
 Welcome to the Needham Sharks! A variety of resources can be found on this site. This website is still a work in progress, so apologies if any bookmarks break in the upcoming weeks.
