--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ permalink: /
 author_profile: true
 ---
 
-Welcome to the Needham Sharks! A variety of resources can be found on this site. This website is still a work in progress, so apologies if any bookmarks break in the upcoming weeks.
+Welcome to the Needham Sharks! A variety of resources can be found here. This website is still a work in progress, so apologies if any bookmarks break in the upcoming weeks.
